fix: correct layout breakpoints

--- a/src/css/components/_item-cards.css
+++ b/src/css/components/_item-cards.css
@@ -2,7 +2,7 @@
 
 
 .about-card {
-  max-width: 32rem;
+  max-width: 34rem;
 }
 
 
