--- a/src/css/partials/_grid.css
+++ b/src/css/partials/_grid.css
@@ -20,26 +20,20 @@
 }
 
 
-@media screen and (min-width: 860px) {
+@media screen and (min-width: 760px) {
 
 
   .col-2-l {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+
+
+@media screen and (min-width: 960px) {
 
 
   .col-3-l {
     grid-template-columns: repeat(3, 1fr);
-  }
-
-
-  .col-span-1-2-l {
-    grid-column: 1 / 3;
-  }
-
-
-  .col-span-3-5-l {
-    grid-column: 3 / 6;
   }
 }
 
